--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,6 @@ img {
     margin-right: auto;
     margin-left: auto;
     text-align: center;
-    letter-spacing: 0.02em;
 }
 
 .button-studio {
@@ -1058,7 +1057,7 @@ justify-content: space-around; */
     display: inherit;
 }
 
-@media screen and ( min-width: 428px ) and ( max-width: 768px ) {
+@media screen and ( max-width: 768px ) {
     body {
         max-width: 428px;
     }
@@ -1071,6 +1070,8 @@ justify-content: space-around; */
         width: 428px;
         margin-left: 0;
         margin-right: auto;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .header-bottom {
@@ -1085,10 +1086,6 @@ justify-content: space-around; */
         display: none;
     }
 
-    backgrond-section-one {
-        display: block;
-    }
-
     .containerone {
         max-width: 428px;
         padding: 112px 0;
@@ -1098,8 +1095,6 @@ justify-content: space-around; */
         width: 318px;
         font-size: 36px;
         line-height: 1.1;
-        margin-right: 0;
-        margin-left: 0;
     }
 
     .button-studio {
@@ -1189,6 +1184,7 @@ justify-content: space-around; */
     .list-customer {
         padding-bottom: 96px;
         flex-wrap: wrap;
+        justify-content: center;
     }
 
     .list-customer-item {
@@ -1257,6 +1253,142 @@ justify-content: space-around; */
     .modal {
         width: 392px;
         height: 586px;
+    }
+    
+    .modal-form {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .menu-toggle {
+        background-color: #FFFFFF;
+        border: 0px;
+        width: 32px;
+        height: 32px;
+        transition-property: cursor;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .menu-toggle:is(:hover, :focus) {
+        cursor: pointer;
+    }
+
+    .phone-nav {
+        padding-top: 80px;
+    }
+
+    .close-phone-nav {
+        background: #E7E9FC;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        transition-property: background, fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        position: absolute;
+        top: 40px;
+        right: 40px;
+    }
+
+    .close-svg-n {
+        display: inline;
+    }
+    
+    .close-phone-nav:is(:hover, :focus) {
+        background: #404BBF;
+    }
+
+    .close-phone-nav:is(:hover, :focus) .close-svg {
+        fill: #FFFFFF;
+    }
+
+    .burger-menu {
+        background-color: #FFFFFF;
+        position: relative;
+        padding-left: 40px;
+        padding-right: 40px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+    }
+
+    .is-open {
+        transform: translateX(0);
+    }
+
+    .links {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.1;
+    }
+
+    .li-nav {
+        margin-bottom: 40px;
+    }
+
+    .contact {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+    }
+
+    .cont-item {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .address-phone {
+        margin-bottom: 40px;
+        margin-top: 300px;
+    }
+
+    .address-phone:is(:hover, :focus) {
+        margin-top: 284px;
+    }
+
+    .address-phone-e {
+        margin-bottom: 48px;
+    }
+
+    .address-phone-e:is(:hover, :focus) {
+         margin-bottom: 32px;
+    }
+
+    .address-phone-e:is(:hover, :focus) .contact {
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 1.1;
+        color: #4D5AE5;
+    }
+
+    .address-phone:is(:hover, :focus) .contact {
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 1.1;
+        color: #4D5AE5;
+    }
+
+    .list-icon-n {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 40px;
+    }
+
+    .links-soc-cmd-n {
+        display: block;
+        width: 24px;
+        height: 24px;
+    }
+
+    .list-item-icon-n {
+        display: block;
+        background-color: #4D5AE5;
+        border-radius: 50%;
+        padding: 8px;
     }
 
 }
