--- a/css/styles.css
+++ b/css/styles.css
@@ -1285,10 +1285,10 @@ justify-content: space-around; */
         position: absolute;
         top: 40px;
         right: 40px;
-    }
-
-    .close-svg-n {
-        display: inline;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 8px;
+        padding-right: 8px;
     }
     
     .close-phone-nav:is(:hover, :focus) {
