--- a/css/styles.css
+++ b/css/styles.css
@@ -1388,4 +1388,17 @@ justify-content: space-around; */
         padding: 8px;
     }
 
+    .containerone {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/dark-bg-428x432.jpg);
+    }
+
 }
+
+@media (min-device-pixel-ratio: 2),
+       (-webkit-min-device-pixel-ratio: 2), 
+       (min-resolution: 192dpi), 
+       (min-resolution: 2dppx) {
+        .containerone {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/dark-bg@2.jpg);
+        }
+       }
