--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,10 @@ img {
     padding-right: 15px;
 }
 
+.tablet {
+    margin-right: 40px;
+}
+
 
 .backgrond-section-one.footer-bso {
     display: flex;
@@ -1064,7 +1068,6 @@ justify-content: space-around; */
     }
 
     .header-container {
-        width: 428px;
         margin-left: 0;
         justify-content: space-between;
         align-items: center;
@@ -1103,7 +1106,7 @@ justify-content: space-around; */
     .containertwo {
         padding: 96px 0;
         display: block;
-        width: 396px;
+        width: 100%;
     }
     
     .ourgoals {
@@ -1112,7 +1115,8 @@ justify-content: space-around; */
 
     .og-item {
         margin-right: 0;
-        padding-bottom: 72px;
+        margin-bottom: 72px;
+        padding: 0 16px;
     }
 
     .og-item:last-child {
@@ -1136,7 +1140,7 @@ justify-content: space-around; */
     }
     
     .containerthree {
-        width: 428px;
+        width: 100vw;
     }
 
     .photos {
@@ -1145,7 +1149,6 @@ justify-content: space-around; */
 
     .command {
         display: block;
-        width: 264px;
         margin-right: auto;
         margin-left: auto;
         padding-bottom: 172px;
@@ -1173,7 +1176,7 @@ justify-content: space-around; */
 
     .customers-container {
         display: block;
-        width: 428px;
+        width: 100%;
     }
 
     .customers {
@@ -1188,19 +1191,24 @@ justify-content: space-around; */
 
     .list-customer-item {
         margin-bottom: 72px;
+        margin-right: 0px;
+    }
+
+    .list-customer-item:nth-child(2n+1) {
         margin-right: 16px;
     }
 
     .container-footer {
-        width: 428px;
+        width: 100%;
         display: block;
     }
 
     .footer-one-div {
-        margin-right: auto;
-        margin-left: auto;
         padding-bottom: 0;
         margin-bottom: 72px;
+        padding-left: 80px;
+        padding-right: 80px;
+        width: 100%;
     }
 
     .footer-soc-links {
@@ -1241,12 +1249,15 @@ justify-content: space-around; */
 
     .input-footer {
         margin-bottom: 16px;
-        width: 396px;
     }
 
     .btn-form-footer {
         margin-right: auto;
         margin-left: auto;
+    }
+
+    .container-underform {
+        align-items: center;
     }
 
     .modal {
@@ -1420,5 +1431,195 @@ justify-content: space-around; */
        (min-resolution: 2dppx) {
         .containerone {
             background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/dark-bg@2.jpg);
+        }
+       }
+
+@media screen and ( min-width: 769px) and ( max-width: 1440px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    .menu-toggle {
+        display: none;
+    }
+
+    .contact-parents {
+        margin-left: 0;
+    }
+
+    .list-nav {
+        margin-left: 120px;
+        margin-right: 100px;
+    }
+
+    .header-bottom {
+        width: 100vw;
+        padding: 23px 16px;
+    }
+
+    .cont-item  {
+        align-items: flex-start;
+        flex-direction: column;
+    }
+
+    .nav-header {
+        align-items: center;
+    }
+
+    .tablet {
+        margin-right: 0;
+    }
+
+    .header-container {
+        width: 100vw;
+        padding: 0;
+    }
+
+    .current::after {
+        top: 56px;
+    }
+
+    .containerone {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-tablet.jpg);
+    }
+
+    .containertwo {
+        width: 100%;
+        padding: 96px 16px;
+    }
+
+    .svg-icons-bg {
+        display: none;
+    }
+
+    .list-one {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.1;
+    }
+
+    .list-description {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+    .og-item {
+        width: 356px;
+        margin-bottom: 72px;
+    }
+
+    .og-item:nth-child(2) {
+        margin-right: 0;
+    }
+
+    .ourgoals {
+        flex-wrap: wrap;
+    }
+
+    .photos {
+        display: none;
+    }
+
+    .burger-menu {
+        display: none;
+    }
+
+    .containerthree {
+        width: 100%;
+        padding: 0 108px;
+    }
+
+    .command {
+        flex-wrap: wrap;
+        padding-bottom: 104px;
+    }
+
+    .command-title {
+        padding-top: 96px;
+    }
+
+    .commad-item {
+        margin: 0;
+    }
+
+    .commad-item:nth-child( -n + 2 ) {
+        margin-bottom: 64px;
+    }
+
+    .commad-item:nth-child( 2n + 1 ) {
+        margin-right: 24px;
+    }
+
+    .customers-container {
+        width: 100%;
+        padding: 0 108px;
+    }
+
+    .list-customer {
+        padding-bottom: 96px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .list-customer-item {
+        margin: 0;
+    }
+
+    .list-customer-item:nth-child( -n + 2) {
+        margin-right: 24px;
+    }
+
+    .list-customer-item:nth-child(4) {
+        margin-right: 24px;
+    }
+
+    .list-customer-item:nth-child(5) {
+        margin-right: 24px;
+    }
+
+    .list-customer-item:nth-child( -n + 3 ) {
+        margin-bottom: 72px;
+    }
+
+    .container-footer {
+        flex-wrap: wrap;
+        width: 100%;
+        padding: 96px 0;
+    }
+
+    .footer-one-div {
+        padding-left: 108px;
+        margin-right: 24px;
+        width: auto;
+        padding-bottom: 72px;
+    }
+
+    .footer-soc-links {
+        padding-right: 164px;
+        margin: 0;
+        padding-bottom: 72px;
+    }
+
+    .footer-description {
+        width: 264px;
+        margin-right: 0;
+    }
+
+    .container-form {
+        padding-left: 108px;
+        padding-right: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+}
+
+@media (min-device-pixel-ratio: 2),
+       (-webkit-min-device-pixel-ratio: 2), 
+       (min-resolution: 192dpi), 
+       (min-resolution: 2dppx) {
+        .containerone {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-tablet@2.jpg);
         }
        }
