--- a/css/styles.css
+++ b/css/styles.css
@@ -1097,7 +1097,11 @@ justify-content: space-around; */
     .first-section-title {
         width: 318px;
         font-size: 36px;
-        line-height: 1.1;
+    }
+
+    .backdrop {
+        padding-top: 96px;
+        padding-bottom: 114px;
     }
 
     .button-studio {
@@ -1348,7 +1352,6 @@ justify-content: space-around; */
 
     .address-phone {
         margin-bottom: 40px;
-        margin-top: 300px;
     }
 
     .address-phone:is(:hover, :focus) {
@@ -1380,7 +1383,6 @@ justify-content: space-around; */
     .list-icon-n {
         display: flex;
         justify-content: space-between;
-        padding-bottom: 40px;
     }
 
     .links-soc-cmd-n {
@@ -1458,9 +1460,10 @@ justify-content: space-around; */
     }
 
     .first-section-title {
-        width: 318px;
         font-size: 36px;
-        line-height: 1.1;
+        margin-left: 0;
+        margin-right: 0;
+        text-align: center;
     }
 
     .button-studio {
@@ -1682,6 +1685,10 @@ justify-content: space-around; */
         height: 100vh;
         transform: translateX(100%);
         transition: transform 250ms ease-in-out;
+        padding-bottom: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .is-open {
@@ -1711,7 +1718,6 @@ justify-content: space-around; */
 
     .address-phone {
         margin-bottom: 40px;
-        margin-top: 300px;
     }
 
     .address-phone:is(:hover, :focus) {
@@ -1743,7 +1749,6 @@ justify-content: space-around; */
     .list-icon-n {
         display: flex;
         justify-content: space-between;
-        padding-bottom: 40px;
     }
 
     .links-soc-cmd-n {
@@ -1772,11 +1777,18 @@ justify-content: space-around; */
         justify-content: flex-start;
         margin-bottom: 48px;
         flex-wrap: wrap;
-        width: 436px;
+        width: 263px;
     }
 
     .button-portfolio {
         margin-bottom: 16px;
+        padding: 8px 16px;
+        height: auto;
+        margin-right: 8px;
+    }
+
+    .li-b {
+        margin-bottom: 0;
     }
 
     .list-set-item {
@@ -1829,13 +1841,22 @@ justify-content: space-around; */
     }
 
     .containertwo {
-        padding: 96px 0;
+        padding: 96px 16px;
         display: block;
         width: 100%;
     }
     
     .ourgoals {
         display: block;
+    }
+
+    .backdrop {
+        padding-top: 96px;
+        padding-bottom: 114px;
+    }
+
+    .close-phone-nav {
+        top: 0;
     }
 
     .og-item {
@@ -1845,7 +1866,7 @@ justify-content: space-around; */
     }
 
     .og-item:last-child {
-        padding-bottom: 0;
+        margin-bottom: 0;
     }
     
     .svg-icons-bg {
@@ -2057,6 +2078,10 @@ justify-content: space-around; */
         height: 100vh;
         transform: translateX(100%);
         transition: transform 250ms ease-in-out;
+        padding-bottom: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .is-open {
@@ -2082,11 +2107,6 @@ justify-content: space-around; */
     .cont-item {
         flex-direction: column;
         align-items: flex-start;
-    }
-
-    .address-phone {
-        margin-bottom: 40px;
-        margin-top: 300px;
     }
 
     .address-phone:is(:hover, :focus) {
@@ -2117,8 +2137,6 @@ justify-content: space-around; */
 
     .list-icon-n {
         display: flex;
-        justify-content: space-between;
-        padding-bottom: 40px;
     }
 
     .links-soc-cmd-n {
@@ -2206,7 +2224,7 @@ justify-content: space-around; */
     }
 
     .header-container {
-        width: 100vw;
+        width: 100%;
         padding: 0;
     }
 
@@ -2246,6 +2264,14 @@ justify-content: space-around; */
 
     .og-item:nth-child(2) {
         margin-right: 0;
+    }
+
+    .og-item:nth-child(3) {
+        margin-bottom: 0;
+    }
+
+    .og-item:nth-child(4) {
+        margin-bottom: 0;
     }
 
     .ourgoals {
@@ -2434,7 +2460,7 @@ justify-content: space-around; */
         }
     
         .header-container {
-            width: 100vw;
+            width: 100%;
             padding: 0;
             justify-content: space-around;
         }
@@ -2650,6 +2676,10 @@ justify-content: space-around; */
         border-radius: 2px;
         background-color: #404BBF;
         top: 44px;
+    }
+
+    .header-bottom {
+        width: 100%;
     }
 }
 
