--- a/css/styles.css
+++ b/css/styles.css
@@ -899,7 +899,6 @@ justify-content: space-around; */
     font-weight: 400;
     font-size: 12px;
     line-height: 1.3;
-    margin-bottom: 4px;
 }
 
 .other-lb {
@@ -914,7 +913,7 @@ justify-content: space-around; */
 .input-modal {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    width: 360px;
+    width: 100%;
     padding-left: 35px;
     padding-top: 8px;
     padding-bottom: 8px;
@@ -936,7 +935,7 @@ justify-content: space-around; */
     transition-property: border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    width: 360px;
+    width: 100%;
     padding-left: 16px;
     padding-top: 8px;
 }
@@ -977,7 +976,6 @@ justify-content: space-around; */
     font-weight: 400;
     font-size: 12px;
     line-height: 1.2;
-    margin-left: 8px;
     letter-spacing: 0.04em;
     color: #757575;
 }
@@ -1033,8 +1031,9 @@ justify-content: space-around; */
 }
 
 .checkbox-item {
-    width: 16px;
+    max-width: 16px;
     height: 16px;
+    width: 100%;
     margin-right: 8px;
     border: 1.25px solid #2e2f42;
     border-radius: 2px;
@@ -1100,8 +1099,33 @@ justify-content: space-around; */
     }
 
     .backdrop {
-        padding-top: 96px;
-        padding-bottom: 114px;
+        display: flex;
+        justify-content: center;
+        padding: 0;
+    }
+
+    .is-hidden {
+        display: none;
+    }
+
+    .header-m-f {
+        padding-top: 72px;
+        margin-top: 0;
+        padding-left: 0;
+        padding-right: 0;
+        width: 100%;
+        max-width: 360px;
+        font-weight: 600;
+        font-size: 13px;
+        text-align: center;
+    }
+
+    .label-modal {
+        font-size: 10px;
+    }
+
+    .descr-checkbox {
+        font-size: 10px;
     }
 
     .button-studio {
@@ -1262,13 +1286,19 @@ justify-content: space-around; */
     }
 
     .modal {
-        width: 392px;
-        height: 586px;
+        max-width: 320px;
+        max-height: 586px;
+        width: 100%;
+        height: 100%;
+        margin-right: auto;
+        margin-left: auto;
     }
     
     .modal-form {
         padding-left: 16px;
         padding-right: 16px;
+        position: static;
+        padding-bottom: 0;
     }
 
     .menu-toggle {
@@ -1624,13 +1654,18 @@ justify-content: space-around; */
     }
 
     .modal {
-        width: 392px;
-        height: 586px;
+        max-width: 320px;
+        max-height: 586px;
+        width: 100%;
+        height: 100%;
+        margin-right: auto;
+        margin-left: auto;
     }
     
     .modal-form {
         padding-left: 16px;
         padding-right: 16px;
+        position: static;
     }
 
     .menu-toggle {
@@ -1851,8 +1886,33 @@ justify-content: space-around; */
     }
 
     .backdrop {
-        padding-top: 96px;
-        padding-bottom: 114px;
+        display: flex;
+        justify-content: center;
+        padding: 0;
+    }
+
+    .is-hidden {
+        display: none;
+    }
+
+    .header-m-f {
+        padding-top: 72px;
+        margin-top: 0;
+        padding-left: 0;
+        padding-right: 0;
+        width: 100%;
+        max-width: 360px;
+        font-weight: 600;
+        font-size: 13px;
+        text-align: center;
+    }
+
+    .label-modal {
+        font-size: 10px;
+    }
+
+    .descr-checkbox {
+        font-size: 10px;
     }
 
     .close-phone-nav {
@@ -2017,13 +2077,19 @@ justify-content: space-around; */
     }
 
     .modal {
-        width: 392px;
-        height: 586px;
+        max-width: 320px;
+        max-height: 586px;
+        width: 100%;
+        height: 100%;
+        margin-right: auto;
+        margin-left: auto;
     }
     
     .modal-form {
         padding-left: 16px;
         padding-right: 16px;
+        padding-bottom: 0;
+        position: static;
     }
 
     .menu-toggle {
