--- a/css/styles.css
+++ b/css/styles.css
@@ -884,13 +884,13 @@ justify-content: space-around; */
 }
 
 .modal-form {
-    position: absolute;
-    top: 48px;
     display: flex;
     flex-direction: column;
     padding-left: 24px;
     padding-right: 24px;
     padding-bottom: 24px;
+    position: static;
+}
 }
 
 .label-modal {
@@ -1058,6 +1058,8 @@ justify-content: space-around; */
 .text-input-gray {
     margin-bottom: 4px;
     display: inherit;
+    color: #8E8F99;
+    font-size: 12px;
 }
 
 @media screen and ( max-width: 767px ) {
@@ -1287,11 +1289,12 @@ justify-content: space-around; */
 
     .modal {
         max-width: 320px;
-        max-height: 586px;
         width: 100%;
-        height: 100%;
         margin-right: auto;
         margin-left: auto;
+        height: min-content;
+        padding-bottom: 16px;
+        margin-top: 12px;
     }
     
     .modal-form {
@@ -1655,11 +1658,12 @@ justify-content: space-around; */
 
     .modal {
         max-width: 320px;
-        max-height: 586px;
         width: 100%;
-        height: 100%;
         margin-right: auto;
         margin-left: auto;
+        height: min-content;
+        padding-bottom: 16px;
+        margin-top: 12px;
     }
     
     .modal-form {
@@ -2078,11 +2082,12 @@ justify-content: space-around; */
 
     .modal {
         max-width: 320px;
-        max-height: 586px;
         width: 100%;
-        height: 100%;
         margin-right: auto;
         margin-left: auto;
+        height: min-content;
+        padding-bottom: 16px;
+        margin-top: 12px;
     }
     
     .modal-form {
@@ -2301,6 +2306,18 @@ justify-content: space-around; */
     .containerone {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-tablet.jpg);
     }
+
+    .header-m-f {
+    padding-top: 72px;
+    margin-top: 0;
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+    max-width: 360px;
+    text-align: center;
+    } 
+
+
 
     .containertwo {
         width: 100%;
@@ -2746,6 +2763,11 @@ justify-content: space-around; */
 
     .header-bottom {
         width: 100%;
+    }
+
+    .header-m-f {
+        margin-top: 0;
+        padding-top: 72px;
     }
 }
 
